k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-devops
  labels:
    app.kubernetes.io/name: demo-devops
    app.kubernetes.io/part-of: devsu-technical-test
    # Enforce the "restricted" Pod Security Standard at admission time.
    # Equivalent to: no privileged containers, must run as non-root,
    # no hostPath, no hostNetwork, etc.
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
